[gd_scene load_steps=10 format=3 uid="uid://cskwxic2y1axb"]

[ext_resource type="Script" path="res://prefabs/fire_trap.gd" id="1_rfg5a"]
[ext_resource type="Texture2D" uid="uid://c0mkxkuxe262h" path="res://prefabs/Traps/Fire/Off.png" id="2_nicvl"]
[ext_resource type="Texture2D" uid="uid://dt24cp2x1cds0" path="res://prefabs/Traps/Fire/On (16x32).png" id="3_0a6gr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3ynqg"]
atlas = ExtResource("3_0a6gr")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1qa8"]
atlas = ExtResource("3_0a6gr")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_me0wb"]
atlas = ExtResource("3_0a6gr")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_f5pl5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nicvl")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ynqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1qa8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me0wb")
}],
"loop": true,
"name": &"on",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7h7o2"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p25cn"]
size = Vector2(14, 11)

[node name="StaticBody2D" type="StaticBody2D"]
texture_filter = 1
scale = Vector2(3, 3)
script = ExtResource("1_rfg5a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_f5pl5")
animation = &"off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_7h7o2")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_p25cn")
debug_color = Color(1, 0.0156863, 0, 0.419608)

[node name="StartFireTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="StopFireTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="StartFireTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="StopFireTimer" to="." method="_on_stop_fire_timer_timeout"]
